/**
 * Copyright 2018-2020 Streamlit Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

// This is the first message that is sent when a new report is run
message NewReport {
  // The report ID
  string id = 1;

  // The basename of the script that launched this report. Example: "foo.py"
  string name = 2;

  // The full path of the script that launched this report. Example:
  // "/foo/bar/foo.py"
  string script_path = 3;
}
